# servant-sns-webhook

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  ci.nix  result-2  servant-sns-webhook.cabal  shell.nix  stack.yaml
.circleci/: config.yml
example/: Main.hs
nix/: overlay.nix  pkgs.nix  pre-commit.nix  sources.json
servant-sns-webhook/: package.yaml  servant-sns-webhook.cabal
servant-sns-webhook/example/: Main.hs
servant-sns-webhook/src/Network/AWS/SNS/: Webhook.hs
servant-sns-webhook/src/Network/AWS/SNS/Webhook/: Server.hs  Types.hs  Verify.hs
src/Network/AWS/SNS/: Webhook.hs
src/Network/AWS/SNS/Webhook/: Server.hs  Types.hs  Verify.hs
