cabal-version:       >=1.10
name:                servant-sns-webhook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Feeld/servant-sns-webhook
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@feeld.co
copyright:           20018 Feeld
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Network.AWS.SNS.Webhook
    Network.AWS.SNS.Webhook.Verify
    Network.AWS.SNS.Webhook.Types
    Network.AWS.SNS.Webhook.Server
  build-depends:
    base >=4.12 && <4.13,
    safe-exceptions >=0.1 && <0.2,
    lens >=4.17 && <4.18,
    exceptions >=0.10 && <0.11,
    mtl >=2.2 && <2.3,
    cryptostore >=0.1 && <0.2,
    bytestring >=0.10 && <0.11,
    cache >=0.1 && <0.2,
    generic-lens >=1.1 && <1.2,
    string-conv >=0.1 && <0.2,
    time >=1.8 && <1.9,
    x509 >=1.7 && <1.8,
    x509-store >=1.6 && <1.7,
    x509-validation >=1.6 && <1.7,
    http-client >=0.5 && <0.6,
    unliftio >=0.2 && <0.3,
    aeson >=1.4 && <1.5,
    base64-bytestring >=1.0 && <1.1,
    hashable >=1.2 && <1.3,
    unordered-containers >=0.2 && <0.3,
    text >=1.2 && <1.3,
    monad-logger >=0.3 && <0.4,
    servant-server >=0.15 && <0.16,
    servant >=0.15 && <0.16,
    file-embed >=0 && <1,
    network-uri >=2.6 && <2.7
  hs-source-dirs:      src
  ghc-options: -Wall -fwarn-redundant-constraints
  default-language:    Haskell2010

executable sns-webhook
  main-is: Main.hs
  hs-source-dirs:
      example
  ghc-options: -Wall
  build-depends:
    base,
    warp,
    aeson,
    bytestring,
    http-client-tls,
    servant-sns-webhook,
    servant-server,
    wai-extra,
    text
